THE TABS WORK!!!!

--- a/src/main/webapp/css/default.css
+++ b/src/main/webapp/css/default.css
@@ -97,10 +97,9 @@ body
 }
 
 .menu li a{
-    */Text in menu*/
+    /*Text in menu*/
     text-decoration: none;
     color:#3E3C3C;
-
 }
 
 .menu a {
